crates/rupu-cli/src/output/live_view/snapshots/rupu_cli__output__live_view__structure__tests__a_drilled_for_each_lists_its_filtered_units_and_marks_the_cursor.snap
---
source: crates/rupu-cli/src/output/live_view/structure.rs
assertion_line: 3076
expression: s
---
  ✓  s01  scanner ···· ✓ 1s
  │
  ✓  s02  scanner ···· ✓ 1s
  │
  ◈  recon  split ···· ✓ 2s
  ╭─ hunt
  ╰─ probe
  │
▸ ├─╭─ ⊞ hunt  for_each · runtime fan-out · filter: failed ···· ◐ running
  │ │ ▓▓▓▓▓▓▓▓▓▓▓▓░░░░░░░░ 52/86 ✓52 ◐6 ✗2 ○26
▸ │ ✗├─ svc-7  anthropic/claude-opus-5-5 ···· ✗ failed · otter#8
  │ ✗├─ svc-31  anthropic/claude-opus-5-5 ···· ✗ failed · otter#32
  │ ◄─╰─
  │
  ✓  probe  prober ···· ✓ 5s
  │
  ◈◄─ gather  join · wait:all
  │
  ○  report  reporter
