crates/rupu-cli/src/output/live_view/snapshots/rupu_cli__output__live_view__structure__tests__a_pending_loop_folds_whole_and_a_fan_out_in_a_loop_keeps_the_gutter.snap
---
source: crates/rupu-cli/src/output/live_view/structure.rs
assertion_line: 3571
expression: s
---
  ├─╭─ ↻ loop:again  until {{ steps.judge.output }} · max 3 ···· ◐ running
  │ ├─╭─ ⊞ hunt  for_each · runtime fan-out ···· ◐ running
  │ │ │ ▓▓▓▓▓▓▓▓▓▓▓▓░░░░░░░░ 52/86 ✓52 ◐6 ✗2 ○26
  │ │ ◐├─ svc-56  anthropic/claude-opus-5-5 ···· ◐ running · otter#57
  │ │ ◐├─ svc-57  anthropic/claude-opus-5-5 ···· ◐ running
  │ │ ◐├─ svc-58  anthropic/claude-opus-5-5 ···· ◐ running · otter#59
  │ │ ◐├─ svc-59  anthropic/claude-opus-5-5 ···· ◐ running · otter#60
  │ │ │ … +82 more · [enter] expand
  │ │ ◄─╰─
  │ │
  │ ○  judge  judge
  │ ◄─ ↺ loop:again  loop-back
