crates/rupu-cli/src/output/live_view/snapshots/rupu_cli__output__live_view__structure__tests__a_settled_phase_folds_and_the_frontier_phase_stays_open.snap
---
source: crates/rupu-cli/src/output/live_view/structure.rs
expression: s
---
  ✓  pre  scanner ···· ✓ 3s
  │
  ⟦ recon1 … join1 ⟧  phase · 4 steps ···· ✓ 3 done · 1 skipped
  │
  ◈  recon2  split ···· ✓ 1s
  ╭─ c
  ╰─ d
  │
  ◐  c  cx ···· ◐ running
  │
  ○  d  dx
  │
  ◈◄─ join2  join · wait:all
  │
  ○  post  poster
