crates/rupu-cli/src/output/live_view/snapshots/rupu_cli__output__live_view__structure__tests__a_unit_carrying_command_node_gets_its_block_under_its_row.snap
---
source: crates/rupu-cli/src/output/live_view/structure.rs
expression: render_plain(&rows)
---
  ◐  sweep  run · scan · for_each ···· ◐ running
      ▓▓▓▓▓▓▓░░░░░░░░░░░░░ 1/3 ✓1 ◐1 ✗1
    ◐├─ svc-1  otter#2 · anthropic/claude-opus-5-5 ···· ◐ running
    ✓├─ svc-0  anthropic/claude-opus-5-5 ···· ✓ done
    ✗├─ svc-2  otter#3 · anthropic/claude-opus-5-5 ···· ✗ failed
