crates/rupu-cli/src/output/live_view/snapshots/rupu_cli__output__live_view__structure__tests__a_warned_step_wears_a_marker_beside_its_state.snap
---
source: crates/rupu-cli/src/output/live_view/structure.rs
expression: s
---
  ✓  preflight  scanner · heron#1 · anthropic/claude-opus-5-5 ···· ✓ 18s @kuki
  │
  ◈  recon  split ···· ✓ 2s
  ╭─ sweep
  ╰─ probe
  │
▸ ◐  sweep  sweeper · otter#2 · openai/gpt-5 ···· ◐ running ⚠2 @mini
  │
  ✓  probe  prober · lynx#3 ···· ✓ 1m 35s ⚠
  │
  ◈◄─ gather  join · wait:all
  │
  ⏸  approve  gate ···· ⏸ awaiting
  │
  ├─╭─ ↻ loop:refine  until {{ steps.critique.output }} · max 5 ···· ◐ iter 2/5
  │ ✓  gen  generator ···· ✓ 7s
  │ │
  │ ◐  critique  critic ···· ◐ running
  │ ◄─ ↺ loop:refine  loop-back
  │
  ├─╭─ ⟲ review  panel · 2 panelists · round 1/3 ···· ◐ running
  │ │
  │ ◐├─ security-reviewer  wren#1 · anthropic/claude-sonnet-5-5 ···· ◐ running
  │ ✓├─ perf-reviewer  egret#1 ···· ✓ done
  │ │
  │ ◄─╰─
