crates/rupu-cli/src/output/live_view/snapshots/rupu_cli__output__live_view__structure__tests__kinds_snapshot.snap
---
source: crates/rupu-cli/src/output/live_view/structure.rs
expression: render_plain(&rows)
---
  ✗  build  run · make ···· ✗ failed
  │
  ◆  comment  action · scm.prs.comment ···· ✓ 1s @kuki
  │
  ├─╭─ ⊞ hunt  for_each · runtime fan-out ···· ◐ running
  │ │
  │ ○├─ runtime items
  │ │
  │ ◄─╰─
  │
  ├─╭─ ⇉ lanes  parallel · 2 sub-steps ···· ⊘ skipped
  │ │
  │ ⊘├─ spec  writer
  │ ⊘├─ verify  reviewer
  │ │
  │ ◄─╰─
  │
  ◇  pick  branch · when: {{ steps.build.output }} ···· ✓ 2s
  ╰─ ▶ then → ship
  ╰─ ⊘ else → hold
  │
  ◐  ship  shipper ···· ◐ running
  │
  ⊘  hold  holder ···· ⊘ skipped
