crates/rupu-cli/src/output/live_view/snapshots/rupu_cli__output__live_view__structure__tests__scale_snapshot_86_units_under_a_split_with_20_settled_steps.snap
---
source: crates/rupu-cli/src/output/live_view/structure.rs
expression: s
---
  ✓ s01 … recon (+21 done)
  │
  ├─╭─ ⊞ hunt  for_each · runtime fan-out ···· ◐ running
  │ │ ▓▓▓▓▓▓▓▓▓▓▓▓░░░░░░░░ 52/86 ✓52 ◐6 ✗2 ○26
  │ ◐├─ svc-56  otter#57 · anthropic/claude-opus-5-5 ···· ◐ running
  │ ◐├─ svc-57  anthropic/claude-opus-5-5 ···· ◐ running
  │ ◐├─ svc-58  otter#59 · anthropic/claude-opus-5-5 ···· ◐ running
  │ ◐├─ svc-59  otter#60 · anthropic/claude-opus-5-5 ···· ◐ running
  │ │ … +82 more · [enter] expand
  │ ◄─╰─
  │
  ✓  probe  prober ···· ✓ 5s
  │
  ◈◄─ gather  join · wait:all
  │
  ○  report  reporter
